# experimental-koinworks-complaints

./: .gitignore  .readme.md.swp  5_keluhan_label_lda.csv  5_label_lda.csv  6_hasil_label_lda.csv  Search.py  Untitled.ipynb  app.py  check_labels.ipynb  check_model.ipynb  cleaning.py  cluster_topic.py  eda.py  embeddings.py  flair_embeddings.py  koinwork.csv  koinworks.csv  koinworks_cleaned.csv  koinworks_fix.pkl  koinworks_keluhan_lda.csv  koinworks_labeled_lda.csv  label.py  pretrain.py  pyproject.toml  readme.md  search.py  similar.py  stopwords.txt  topic_model.py  train.py  util.py
.ropeproject/: globalnames  objectdb
.vim/: coc-settings.json
data/: 0_koinworks_raw_id.csv  1_koinworks_cleaned.csv  2_koinworks_fix.pkl  koinwork.csv  koinworks_cleaned.csv  koinworks_fix.pkl  koinworks_gabung_label.pkl  koinworks_raw.csv  koinworks_temp.csv  tfidf.pkl
data/flair_format/: test.txt  valid.txt
data/flair_format/train/: train.txt
experiments/: Top2Vec.py  Untitled.ipynb  app.py  exp.py  pyproject.toml  readme.md  top2vec.model
wasted__/: app.py
