[tool.poetry]
name = "koinworks-consent"
version = "0.1.0"
description = ""
authors = ["svmihar <svmihar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
rich = "^5.2.0"
pandas = "^1.1.0"
sklearn = "^0.0"
flair = "^0.5.1"
pylint = "^2.6.0"
ktrain = "^0.20.0"
annoy = "^1.16.3"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
ipython = "^7.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
