[tool.poetry]
name = "top2vec_koinworks"
version = "0.1.0"
description = ""
authors = ["svmihar <svmihar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
top2vec = "^1.0.9"
pandas = "^1.1.1"
numpy = "^1.19.1"
umap-learn = "^0.4.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
ipython = "^7.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
